# Django-exercises

./: README.md
ClassBasedViews/ClassBasedViews/: asgi.py  settings.py  urls.py  wsgi.py
ClassBasedViews/main/: admin.py  forms.py  models.py  urls.py  views.py
DRF_nested_routers/api/: admin.py  models.py  serializers.py  urls.py  views.py
DRF_nested_routers/core/: settings.py  urls.py
DRF_serializers/api/: models.py  serializers.py  urls.py  views.py
DRF_serializers/core/: settings.py  urls.py
Django_emails/: README.md  manage.py
Django_emails/django_emails/: asgi.py  settings.py  urls.py  wsgi.py
Django_emails/main/: forms.py  tests.py  views.py
Django_filters/: README.md  films_data.txt  manage.py
Django_filters/DjangoFilters/: asgi.py  settings.py  urls.py  wsgi.py
Django_filters/main/: filters.py  models.py  views.py
Django_signals/: backup.json  db.sqlite3  pyproject.toml
Django_signals/app/: models.py
Django_signals/app/migrations/: 0001_initial.py  0002_alter_post_slug.py  0003_remove_post_user_post_like.py  0004_alter_post_like.py
Django_signals/core/: settings.py
Groups_and_User_perms/: README.md  manage.py
Groups_and_User_perms/groups_and_user_perms/: asgi.py  settings.py  urls.py  wsgi.py
Groups_and_User_perms/main/: decorators.py  forms.py  models.py  urls.py  views.py
ListViews/ListView/: asgi.py  settings.py  urls.py  wsgi.py
ListViews/main/: models.py  urls.py  views.py
ToDo_list/: README.md
TripIdeas_project/: Dockerfile  docker-compose.yml  requirements.txt
django_channels_and_websockets/: requirements.txt
(+122 files in other folders)
