[tool.poetry]
name = "django-signals"
version = "0.1.0"
description = ""
authors = ["Krzysztof Grabczyński <grabczynski.krzysztof@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
